SERVER-42737 Make secondary reads in ShardServerCatalogCacheLoader block behind the PBW lock

(cherry picked from commit e0f6fdab23da872d9cf8a93b88c2332ba45041c0)